--- a/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
@@ -115,10 +115,10 @@
  * 	PAD_CTL_HYS		(1 << 3)
  * 	PAD_CTL_SRE_SLOW	(1 << 2)
  * 	PAD_CTL_SRE_FAST	(0 << 2)
- * 	PAD_CTL_DSE_X1		(0 << 0)
- * 	PAD_CTL_DSE_X2		(1 << 0)
- * 	PAD_CTL_DSE_X3		(2 << 0)
- * 	PAD_CTL_DSE_X4		(3 << 0)
+ * 	PAD_CTL_DSE_X1		(0 << 0) \
+ * 	PAD_CTL_DSE_X2		(2 << 0)  |___ NOTE: the numbering here is not a typo!
+ * 	PAD_CTL_DSE_X4		(1 << 0)  |
+ * 	PAD_CTL_DSE_X6		(3 << 0) /
  * 	NO_PAD_CTL		(1 << 31): indicate this pin does not need config.
  * 	SIO			(1 << 30): Software Input On Field.
  */
