--- a/arch/arm64/configs/stream195x_defconfig
+++ b/arch/arm64/configs/stream195x_defconfig
@@ -254,6 +254,7 @@ CONFIG_SND_SOC_STREAM195X=y
 CONFIG_SND_SOC_AK4458=y
 CONFIG_SND_SOC_AK5704=y
 CONFIG_SND_SOC_SPDIF=y
+CONFIG_SND_SOC_TLV320ADCX140=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
