dt-bindings: tlv320adcx140: add enabled-at-boot channel config
This makes it possible to define channels that should be enabled at boot
without userspace intervention.

By default, all channels are disabled.

Signed-off-by: Quentin Schulz <quentin.schulz@streamunlimited.com>

--- a/Documentation/devicetree/bindings/sound/tlv320adcx140.yaml
+++ b/Documentation/devicetree/bindings/sound/tlv320adcx140.yaml
@@ -147,6 +147,24 @@ properties:
           maximum: 0x7f
         default: [1, 0x00, 2, 0x01, 3, 0x02, 4, 0x03, 5, 0x04, 6, 0x05, 7, 0x06, 8, 0x07]
 
+  sue,enabled-channels:
+    description: |
+       Defines which channels are enabled at probe. By default, all channels
+       are disabled.
+
+       The array is defined as <[CHAN_NR] [[CHAN_NR]...]>.
+
+       CHAN_NR represents the channel to configure:
+       Its value is between 1 and 8 (included).
+
+    allOf:
+      - $ref: /schemas/types.yaml#/definitions/uint32-array
+      - minItems: 1
+        maxItems: 8
+        items:
+          maximum: 8
+        default: []
+
 patternProperties:
  '^ti,gpo-config-[1-4]$':
     $ref: /schemas/types.yaml#/definitions/uint32-array
