dt-bindings: tlv320adcx140: add input-source-at-boot input channel configuration
This makes it possible to define the input source mode for input
channels at boot instead of requiring userspace interaction.

Said configuration is almost certainly fixed per hardware system and
therefore makes sense to be configured from Device Tree directly.

Signed-off-by: Quentin Schulz <quentin.schulz@streamunlimited.com>

--- a/Documentation/devicetree/bindings/sound/tlv320adcx140.yaml
+++ b/Documentation/devicetree/bindings/sound/tlv320adcx140.yaml
@@ -165,6 +165,29 @@ properties:
           maximum: 8
         default: []
 
+  sue,input-source:
+    description: |
+       Defines the input source configuration for each input channel.
+
+       The array is defined as <IN_CHAN1 IN_CHAN2 IN_CHAN3 IN_CHAN4>.
+
+       IN_CHANx is one of the following:
+       0 - Analog differential input for channel x
+       1 - Analog single-ended Input for channel x
+       2 - Digital PDM input for channel x
+
+       If 2 is selected, the output of up to 2 PDM microphones can be routed
+       through each PDMIN pin. The appropriate PDMCLK should be configured to
+       provide clock to the PDM microphones.
+
+    allOf:
+      - $ref: /schemas/types.yaml#/definitions/uint32-array
+      - minItems: 1
+        maxItems: 4
+        items:
+          maximum: 2
+        default: [0, 0, 0, 0]
+
 patternProperties:
  '^ti,gpo-config-[1-4]$':
     $ref: /schemas/types.yaml#/definitions/uint32-array
