--- a/arch/arm64/configs/stream195x_defconfig
+++ b/arch/arm64/configs/stream195x_defconfig
@@ -247,6 +247,7 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_USB is not set
 CONFIG_SND_SOC=y
+CONFIG_SND_SOC_FSL_DSP=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_MICFIL=y
 CONFIG_SND_SOC_STREAM195X=y
